2009-01-09  Matthias Clasen  <mclasen@redhat.com>

        Merged from trunk:

        Bug 566064 – Add NOATIME flag to query_info_flags

        * glocalfileinfo.c (get_content_type): Try using O_NOATIME when
        sniffing for mime types. Based on a patch by A. Walton

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

        Merged from trunk:

        * gio/gunixmounts.c (g_unix_mount_at): fix leak that occurs when
        multiple mount entries match the requested path (Ryan Lortie)

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

        Merged from trunk:

        Bug 515777 - incorrect date&time on copy

	Patch by Alexander Larsson

        * glocalfile.c:
        (g_local_file_class_init):
        Copy mtime by default

        * gfile.c:
        Change docs about G_FILE_COPY_ALL_METADATA to not mention
        mtime as an example. 

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

        Merged from trunk:

        Bug 558298 – Hide ecryptfs mounts
	
	Patch by Martin Pitti

        * gunixmounts.c: (guess_system_internal): Hide ecryptfs mounts,
        so that the desktop does not show both the mount and the target
        directory. Patch by Martin Pitt

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

        Merged from trunk:

        Bug 558458 – Cannot build gio tests on Solaris using SUN cc

        * tests/live-g-file.c: Support compilers that don't understand
        ISO C varargs macros. Patch by Eric Lamarque

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

        Merged from trunk:

	Patch by Martin Pitti

        Bug 526320 – should not list mounts that the user doesn't have
        permission to use

        gunixmounts.c: Use g_access() to check accessibility of local devices.
        Patch by Martin Pitt

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gdatainputstream.c (g_data_input_stream_read_line): Revert the
	behaviour change, and update the docs instead, to avoid breaking
	existing users.
